--- a/css/auth.css
+++ b/css/auth.css
@@ -1,82 +1,128 @@
 @import url('https://fonts.googleapis.com/css2?family=Chakra+Petch&display=swap');
-
-:root{
-    --pink:#ff0077;
+:root {
+    --pink: #ff0077;
 }
 
-*{
-    margin: 0;padding: 0;
-    box-sizing:border-box;
-    font-family:"Chakra Petch",sans-serif;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "Chakra Petch", sans-serif;
 }
 
-.container{
+.container {
     display: flex;
-    align-items: center;
-    justify-content: center;
-    height:100vh;
+    height: 100vh;
     background: #000;
 }
 
-.center{
-    width:450px;
+.left{
+    width:65%;
+}
+
+.left img{
+    width:100%;
+    height:100%;
+}
+
+.right {
+    width:35%;
     display: flex;
     flex-direction: column;
+    margin:auto;
     padding:5%;
-    align-items: center;
-    justify-content: center;
 }
 
-h1{
+h1 {
     text-align: center;
     margin-bottom: 30px;
-    color:#fff;
+    color: #fff;
 }
 
-.input-field{
-    width:100%;
+.input-field {
+    position:relative;
     display: flex;
     flex-direction: column;
     margin-bottom: 20px;
 }
 
-.input-field input{
-    border:none;
-    border-bottom:1px solid var(--pink);
-    padding:10px;
-    outline:none;
+.input-field label{
+    margin-bottom: 10px;
     color:#fff;
-    background: transparent;
 }
 
-.input-field button{
-    background: var(--pink);
-    border-radius:5rem;
+.input-field input {
+    padding:10px 10px 10px 50px;
     border:none;
-    outline:none;
-    padding:8px;
+    border-bottom:1px solid var(--pink);
+    background: transparent;
     color:#fff;
-    font-size:16px;
-    font-weight: bold;
+    outline:none;
+    transition:all ease 0.5s;
+}
+ .input-field input:focus{
+    border-bottom:1px solid #fff;
+}
+
+.input-field i.fas{
+    position:absolute;
+    top:44px;
+    left:16px;
+    color:var(--pink);
+    font-size:12px;
+}
+
+.input-field i.far{
+    position:absolute;
+    top:44px;
+    right:16px;
+    color:var(--pink);
+    font-size:12px;
     cursor:pointer;
+}
+
+#hide{
+    display: none;
+}
+
+.input-field button {
+    background: var(--pink);
+    border-radius: 5px;
+    border: none;
+    outline: none;
+    padding: 8px;
+    color: #fff;
+    font-size: 16px;
+    font-weight: bold;
+    cursor: pointer;
 }
 
 p{
     color:#fff;
+    font-weight: bold;
 }
 
 a{
-    color:var(--pink);
+    color:#ff0099;
     text-decoration: none;
 }
 
-a:hover{
+a:hover {
     text-decoration: underline;
 }
 
+@media(max-width:870px) {
+    .left{
+        display: none;
+    }
+    .right {
+        width:350px;
+        padding: 0;
+    }
+}
+
 @media(max-width:450px){
-    .center{
+    .right{
         width:90%;
-        padding:0;
     }
 }
